--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,14 @@
 {
-    "require": {
-        "piwik/device-detector": "dev-master",
-        "doctrine/cache": "^1.8",
-        "symfony/cache": "^4.2",
-        "ext-json": "*"
+  "require": {
+    "piwik/device-detector": "dev-master",
+    "doctrine/cache": "^1.8",
+    "symfony/cache": "^4.2",
+    "ext-json": "*",
+    "ext-redis": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "DeviceDetectorNet\\": "src/"
     }
+  }
 }
