--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "doctrine/cache": "^1.8",
     "symfony/cache": "^4.2",
     "ext-json": "*",
-    "ext-redis": "*"
+    "ext-redis": "*",
+    "ext-curl": "*"
   },
   "autoload": {
     "psr-4": {
