--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,10 +6,10 @@ image: chialab/php:7.3
 cache:
   paths:
   - vendor/
+services:
+  - redis:latest
 
 before_script:
-  - apt update
-  - apt install -y redis-server
   - composer install
   - php -S localhost:9000 -t public &
 
