--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ services:
 
 before_script:
   - composer install
-  - php -S localhost:9000 -t public &
+  - php -S localhost:9000 -t public >/dev/null 2>/dev/null &
 
 test:
   script:
