--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "symfony/cache": "^4.2",
     "ext-json": "*",
     "ext-redis": "*",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "symfony/yaml": "^4.3"
   },
   "autoload": {
     "psr-4": {
