--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "2.0.0-rc.28",
+    "bootstrap-vue": "2.0.0",
     "core-js": "^2.6.9",
     "vue": "^2.6.10",
     "vue-router": "^3.0.1"
@@ -19,7 +19,7 @@
     "@vue/cli-plugin-typescript": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
     "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^8.0.0",
     "typescript": "^3.2.1",
     "vue-template-compiler": "^2.5.21"
   }
