--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "piwik/device-detector": "dev-master",
+    "matomo/device-detector": "dev-master",
     "doctrine/cache": "^1.8",
     "symfony/cache": "^5.0",
     "ext-json": "*",
