--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,17 @@
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "webpack": "^5.38.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.1",
     "@vue/cli-plugin-typescript": "^4.1.1",
     "@vue/cli-service": "^4.1.1",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^10.0.4",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.0.1",
     "typescript": "^4.0.5",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "webpack": "^4.46.0"
   }
 }
