--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "php": "^7.4",
+    "php": ">=7.4 <8.1",
     "matomo/device-detector": "dev-master",
     "symfony/cache": "^5.0",
     "ext-json": "*",
