--- a/client/package.json
+++ b/client/package.json
@@ -3,26 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "buildonly": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.15.0",
-    "core-js": "^3.4.3",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.1",
-    "webpack": "^5.38.1"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.1",
-    "@vue/cli-plugin-typescript": "^4.1.1",
-    "@vue/cli-service": "^4.1.1",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.0.1",
-    "typescript": "^4.0.5",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "^4.46.0"
+    "autoprefixer": "^10.4.2",
+    "sass": "^1.49.9",
+    "typescript": "^4.5.4",
+    "vite": "^2.8.0",
+    "vite-plugin-rewrite-all": "^0.1.2",
+    "vite-plugin-vue2": "^1.9.3",
+    "vue-tsc": "^0.29.8"
   }
 }
