--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.2",
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
+    "user-agent-data-types": "^0.2.0",
     "vite": "^2.8.0",
     "vite-plugin-rewrite-all": "^0.1.2",
     "vite-plugin-vue2": "^1.9.3",
