--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,14 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^5.0.6",
     "autoprefixer": "^10.4.2",
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
-    "user-agent-data-types": "^0.2.0",
+    "user-agent-data-types": "^0.3.0",
     "vite": "^2.8.0",
     "vite-plugin-rewrite-all": "^0.1.2",
-    "vite-plugin-vue2": "^1.9.3",
+    "vite-plugin-vue2": "^2.0.1",
     "vue-tsc": "^0.29.8"
   }
 }
