--- a/client/package.json
+++ b/client/package.json
@@ -9,20 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.15.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.1"
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue-3": "^0.5.0",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^5.0.6",
-    "autoprefixer": "^10.4.2",
+    "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
+    "unplugin-vue-components": "^0.22.12",
     "user-agent-data-types": "^0.3.0",
-    "vite": "^2.8.0",
-    "vite-plugin-rewrite-all": "^0.1.2",
-    "vite-plugin-vue2": "^2.0.1",
-    "vue-tsc": "^0.29.8"
+    "vite": "^4.0.4",
+    "vite-plugin-rewrite-all": "^1.0.1",
+    "vue-tsc": "^1.0.20"
   }
 }
