--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "devicedetector.net",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -11,18 +12,17 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
-    "bootstrap-vue-3": "^0.5.0",
+    "bootstrap-vue-next": "^0.16.6",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.49.9",
     "typescript": "^5.1.3",
-    "unplugin-vue-components": "^0.25.1",
-    "user-agent-data-types": "^0.3.0",
-    "vite": "^4.0.4",
-    "vite-plugin-rewrite-all": "^1.0.1",
-    "vue-tsc": "^1.0.20"
+    "unplugin-vue-components": "^0.26.0",
+    "user-agent-data-types": "^0.4.2",
+    "vite": "^5.2.6",
+    "vue-tsc": "^2.0.7"
   }
 }
